# akit

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/akit/: array.h  constants.h  driver.h  driver_asound.h  driver_jack.h  dsp.h  effect.h  engine.h  listener.h  macros.h  plugin.h  plugin_limiter.h  plugin_reverb.h  plugin_reverb_config.h  sleep.h  sound.h  track.h  utils.h
src/: array.c  driver.c  driver_asound.c  driver_jack.c  dsp.c  effect.c  engine.c  engine_thread.c  main.c  plugin.c  plugin_limiter.c  plugin_reverb.c  sleep.c  sound.c  track.c  utils.c
